# mainspring

./: .gitignore  .releaserc  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: commitlint.yml  release.yml  test.yml
examples/: basic.rs  custom_peripheral.rs  custom_peripheral_addr_space.rs  custom_peripheral_microcode_hook.rs  microcode_step_capture.rs
scripts/: prepare.sh
src/: lib.rs  main.rs
src/address_map/: memory.rs  mod.rs  page.rs
src/address_map/tests/: memory.rs  mod.rs
src/addressable/: mod.rs
src/addressable/tests/: mod.rs
src/cpu/: mod.rs  register.rs
src/cpu/chip8/: display.rs  memory.rs  microcode.rs  mod.rs  register.rs  u12.rs
src/cpu/chip8/operations/: addressing_mode.rs  mod.rs  opcodes.rs  u4.rs
src/cpu/chip8/operations/tests/: mod.rs
src/cpu/mos6502/: microcode.rs  mod.rs  operations.rs  register.rs
src/cpu/mos6502/operations/: address_mode.rs  addressing_mode.rs  mnemonic.rs  mod.rs
src/cpu/mos6502/operations/tests/: code_generation.rs  mod.rs
src/cpu/mos6502/tests/: mod.rs
src/cpu/tests/: mod.rs
src/prelude/v1/: mod.rs
