[package]
name = "mainspring"
version = "0.2.2"
authors = ["Nate Catelli <ncatelli@packetfire.org>"]
edition = "2021"

[dependencies]
parcel = { git = "https://github.com/ncatelli/parcel", tag = "v2.0.1" }

[dependencies.isa-mos6502]
git = "https://github.com/ncatelli/isa-mos6502"
tag = "v1.1.0"
feature = ["parcel"]
